# neural-geometry

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.md  LICENSE  README.md  autoencoder.py  basic_nn.py  bayesian_optimization.ipynb  bayesian_optimization.py  dGH.py  genindex.html  graph_search_space.py  graphs.ipynb  index.html  main.py  manifolds.py  mnist_experiment.ipynb  nlgm.autoencoder.html  nlgm.graph_search_space.html  nlgm.manifolds.html  nlgm.optimizers.html  nlgm.searchspace.html  nlgm.train.html  nlgm.visualize.html  objects.inv  py-modindex.html  pyproject.toml  randomwalk.py  requirements.txt  search.html  searchindex.js  searchspace.ipynb  searchspace.py  tox.ini  train.py  visualizations.py
.github/workflows/: github-pages.yaml  python-test.yaml  release.yaml  ruff.yaml  ruff.yml
_modules/: index.html
_modules/nlgm/: autoencoder.html  graph_search_space.html  manifolds.html  optimizers.html  searchspace.html  train.html  visualize.html
_sources/: index.rst  index.rst.txt  nlgm.autoencoder.rst  nlgm.manifolds.rst  nlgm.train.rst
_static/: documentation_options.js
doc/: requirements.txt
doc/source/: conf.py  index.rst  nlgm.graph_search_space.rst  nlgm.optimizers.rst  nlgm.searchspace.rst  nlgm.visualize.rst
examples/: example.py  graphs.ipynb  main.py  mnist_experiment.ipynb  searchspace.ipynb
nlgm/: __init__.py  autoencoder.py  bayesian_optimization.py  graph_search_space.py  manifolds.py  optimizers.py  searchspace.py  train.py  visualize.py
src/: LICENSE  autoencoder.py  basic_nn.py  bayesian_optimization.py  graph_search_space.py  manifolds.py  visualize.py
test/: dummy_test.py  test_manifolds.py  test_searchspace.py
