[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nlgm"
dynamic = ["version"]
description = "Implementation of the neural latent geometry search framework"
authors = [
  { name="Anupam Bhakta", email="ab5494@columbia.edu" },
  { name="Adam Mehdi", email="adm2243@columbia.edu" },
  { name="Kevin Qiu", email="kzq2000@columbia.edu" }
]
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ae-bii/nlgm"
Issues = "https://github.com/ae-bii/nlgm/issues"

[tool.setuptools]
packages = ["nlgm"]

[tool.setuptools.dynamic]
version = {attr = "nlgm.__version__"}
